--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -56,7 +56,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: joaomesquitademetrio/rotten-potatoes:v2
+          image: joaomesquitademetrio/rotten-potatoes:v1
           ports:
             - containerPort: 5000
           env:
@@ -85,4 +85,4 @@ spec:
     - port: 80
       targetPort: 5000
       nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
